fixed masa page where clementine text was hard to read

--- a/css/style.css
+++ b/css/style.css
@@ -291,8 +291,8 @@ figure {
     padding: 0.3rem 1rem;
     margin-top: 10%;
     margin-left: 35%;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center;
+    align-items: center; */
     width: 30%;
     border-radius: 20px;
     display: grid;
